2013-03-27  Stefan Sprenger  <stefan.sprenger@dkd.de>

	* Fix retrieval of index queue configuration
	* Load TCA of the indexed item's type
	* Add support for field type group:file_reference

2012-12-18  Stefan Sprenger  <stefan.sprenger@dkd.de>

	* Added call of urldecode() on filenames to decode umlauts

2012-12-02  Ingo Renner  <ingo.renner@dkd.de>

	* Fix missing endtime field for file documents

2012-11-22  Ingo Renner  <ingo.renner@dkd.de>

	* Release of version 1.0.0

	* Added TypoScript settings for file duplicate check

2012-10-23  Ingo Renner  <ingo.renner@dkd.de>

	* Added feature #37088: Define custom fields for indexing files through TypoScript
	* Removed language field from tx_solr_file documents

2012-08-24  Ingo Renner  <ingo.renner@dkd.de>

	* Added file garbage collection
	* Added Index Queue post-initialization

2012-08-21  Ingo Renner  <ingo.renner@dkd.de>

	* Added file and attachment detector interfaces
	* Added file indexer registration for page indexing
	* Added page file extractor and file data extraction query

2012-08-20  Ingo Renner  <ingo.renner@dkd.de>

	* Added initial extension scaffolding
	* Added existing file indexing code